--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
+:root{
+  --text-primary: #333;
+  --text-secondary: #555;
+  --text-active: var(--active-color);
+
+  --active-color: #8CAF64;
+  --passive-color: #FD3F40;
+
+  --background-primary: #FFFFFF;
+  --background-secondary: #F3F4F6;
+
+}
+
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
