--- a/src/index.css
+++ b/src/index.css
@@ -27,13 +27,28 @@ body {
   color: var(--text-primary);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
 .CoinIcon{
   max-width: 1.5rem;
   max-height: 1.5rem;
   margin: 0.5rem ;
   padding: auto 0;
+}
+.even{
+  background-color: var(--background-secondary);
+}
+
+.not-even{
+  background-color: inherit;
+}
+
+::-webkit-scrollbar {
+  width: 0;
+}
+
+.total-positive{
+  border-left: 0.4rem solid var(--positive-color);
+}
+.total-passive{
+  border-left: 0.4rem solid #333;
 }
