--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 :root{
   --text-primary: #333;
   --text-secondary: #555;
@@ -19,9 +20,7 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: var(--text-primary);
@@ -34,13 +33,7 @@ body {
   margin: 0.5rem ;
   padding: auto 0;
 }
-.even{
-  background-color: var(--background-secondary);
-}
 
-.not-even{
-  background-color: inherit;
-}
 
 ::-webkit-scrollbar {
   width: 0;
@@ -50,5 +43,18 @@ body {
   border-left: 0.4rem solid var(--positive-color);
 }
 .total-passive{
-  border-left: 0.4rem solid #333;
+  border-left: 0.4rem solid #777;
+}
+.positive{
+  color: var(--positive-color);
+}
+.negative{
+  color: var(--negative-color);
+}
+.passive{
+  color: var(--text-primary);
+}
+
+.star{
+  margin-right: 0.5rem;
 }
